--- a/Recup_images_labellisées/Dockerfile
+++ b/Recup_images_labellisées/Dockerfile
@@ -7,7 +7,11 @@ WORKDIR /app/Recup_images_labellisées
 # Copie le fichier Python et les dépendances
 COPY . /app/Recup_images_labellisées/
 
+# Installe les dépendances Python spécifiées dans le fichier requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Définir le volume pour stocker les images
+VOLUME /app/Recup_images_labellisées/Images
 
 # Exécute le script Python lorsque le conteneur démarre
 CMD ["python", "Images_label_dl.py"]
